<resources>
    <string name="app_name">TrisProject_Audisio</string>
    <string name="Tris">Tris</string>
    <string name="NomeGIocatore">Nome</string>
    <string name="Nometxt">Nome</string>
    <string name="button_00"> </string>
    <string name="button_01"> </string>
    <string name="button_02"> </string>
    <string name="button_03"> </string>
    <string name="button_04"> </string>
    <string name="button_05"> </string>
    <string name="button_06"> </string>
    <string name="button_07"> </string>
    <string name="button_08"> </string>
    <string name="finisciPartita">Termina</string>
    <string name="cominciaPartita">Comincia</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
