<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/hd_paper_texture_grey_9357">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Tris"
            android:layout_width="42dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="166dp"
            android:layout_marginTop="-1dp"
            android:text="@string/Tris" />

        <TextView
            android:id="@+id/divisore2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/Tris"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-1dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1 ">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/button_00"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/button_01"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/button_02"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1 ">

        <Button
            android:id="@+id/button_03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/button_03"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/button_04"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/button_05"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1 ">

        <Button
            android:id="@+id/button_06"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/button_06"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_07"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:text="@string/button_07"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_08"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/button_08"
            android:textSize="60sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/divisore"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-1dp" />

        <Button
            android:id="@+id/finisciPartita"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/divisore"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="14dp"
            android:text="Termina" />

        <Button
            android:id="@+id/cominciaPartita"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/divisore"
            android:layout_alignLeft="@id/finisciPartita"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="283dp"
            android:layout_marginTop="14dp"
            android:text="Comincia" />

    </RelativeLayout>

</LinearLayout>